Stabilizing cache distribution/consistency.